# tree-decision

./: .gitignore  README.md  predict_colab.ipynb  pyproject.toml  train.py  tree_decision_colab.ipynb
