[project]
name = "tree-decision"
version = "0.1.0"
description = "Treinamento de uma árvore de decisão com scikit-learn"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[tool.uv]
# Projeto não empacotado: uv instala apenas as dependências, sem tentar
# construir o próprio projeto (que é apenas um script).
package = false
